--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kabbour-wesite",
+  "homepage": "https://alaa-alasas.github.io/kabbour",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +8,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "aos": "^2.3.4",
+    "gh-pages": "^6.3.0",
     "jsvectormap": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
