--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-google-maps/api": "^2.20.6",
     "aos": "^2.3.4",
     "gh-pages": "^6.3.0",
+    "i18next": "^25.2.0",
     "jsvectormap": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-simple-maps": "^3.0.0",
