--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.5.2",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.3",
     "react-simple-maps": "^3.0.0",
     "react-slick": "^0.30.3",
